@@ -61,6 +61,14 @@ int gnutls_x509_crt_set_pubkey (gnutls_x509_crt_t crt,
 int gnutls_x509_crq_set_pubkey (gnutls_x509_crq_t crq,
 			       gnutls_pubkey_t key);
 
+int
+gnutls_pubkey_verify_hash (gnutls_pubkey_t key, unsigned int flags,
+			     const gnutls_datum_t * hash,
+			     const gnutls_datum_t * signature);
+int
+gnutls_pubkey_get_verify_algorithm (gnutls_pubkey_t key,
+				      const gnutls_datum_t * signature,
+				      gnutls_digest_algorithm_t * hash);
 
 /* Private key operations */
 
